# byteutils

./: Cargo.toml  README.md
src/: lib.rs  string.rs  test.rs  vec.rs
